
	* coutvect.h: made it possible to record values into output vectors
	by a timestamp other than simTime(): added recordWithTimestamp()
	functions to cOutVector. (Increasing timestamp order must still be
	ensured.)

	* cmodule.h: modules can now get notified when a module parameter
	changes, by redefining the handleParameterChange(const char *parname) 
	virtual	method of cModule.

2005-07-24  Andras Varga

	* cdispstr.h: added setTagArg() method for numeric (long) argument as 
	well. (Just converts it to string and calls the other setTagArg()).

	* cpar.h: added isConstant() member to cPar

	* cmessage.h: added cModule *senderModule() to cMessage

	* cmessage.h: if "vector" is a vector gate, msg->arrivedOn("vector") 
	now checks if msg arrived one of the vector's gates. [hint from Ignacio
	Arenas Jimenez]

	* cxmlelement.h: added getFirstChildWithTagName(const char *tagname)
	and getNextSiblingByTagName(const char *tagname) to cXMLElement

	* envirext.h: added flush() to cOutputVectorManager and cOutputScalar-
	Manager classes

2005-07-23  Andras Varga

	* cwatch.h: WATCH() implementation changed: now anything can be watched 
	that has operator<<. If it also has operator>> and it gets watched via
	WATCH_RW(), it can also be modified from the GUI. Objects and pointers 
	to objects can also be watched with WATCH_OBJ() and WATCH_PTR().

	* added cstlwatch.h: macros WATCH_VECTOR(), WATCH_PTRVECTOR, etc

2005-06-25  Andras Varga

	* cpar.h: added default value to type parameter of setFromText().

2005-04-28  Andras Varga

	* cmessage.h: added byteLength(), setByteLength(), addByteLength()
	convenience functions. They just invoke the length(), setLength(),
	addLength() methods.

2005-04-21  Andras Varga

	* util.h: added simtimeToStrShort().

2005-04-04  Andras Varga

	* cenvir.h: fixed compilation bug in gcc3.4. For some obscure reason,
	in template classes gcc 3.4 seems to insist on fully qualifying calls